force-app/main/default/objects/Calendar_beat__c/Calendar_beat__c.object-meta.xml
<CustomObject>
    <label>PJP</label>
    <nameField>
        <displayFormat>PJP - {0000}</displayFormat>
        <label>PJP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PJPs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>