force-app/main/default/objects/Calendar_beat__c/fields/Approver_USer__c.field-meta.xml
<CustomField>
    <fullName>Approver_USer__c</fullName>
    <formula>$User.Id ==  Approver__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver User</label>
    <type>Checkbox</type>
</CustomField>