force-app/main/default/objects/Calendar_beat__c/fields/Auto_PJP_Creation__c.field-meta.xml
<CustomField>
    <fullName>Auto_PJP_Creation__c</fullName>
    <formula>IF(User__r.Profile.Name == &apos;DSM&apos; || User__r.Profile.Name == &apos;SSA&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto PJP Creation</label>
    <type>Checkbox</type>
</CustomField>