force-app/main/default/objects/Calendar_beat__c/fields/Last_PJP_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_PJP_Run__c</fullName>
    <label>Last PJP Run</label>
    <type>Date</type>
</CustomField>