force-app/main/default/objects/Calendar_beat__c/fields/Next_PJP_Run__c.field-meta.xml
<CustomField>
    <fullName>Next_PJP_Run__c</fullName>
    <label>Next PJP Run</label>
    <type>Date</type>
</CustomField>