force-app/main/default/objects/Calendar_beat__c/fields/Next_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Start_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>