force-app/main/default/objects/Calendar_beat__c/fields/PJP_ID__c.field-meta.xml
<CustomField>
    <fullName>PJP_ID__c</fullName>
    <displayFormat>PJP-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>PJP ID</label>
    <type>AutoNumber</type>
</CustomField>