force-app/main/default/objects/Calendar_beat__c/fields/PJP_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>PJP_Id_Text__c</fullName>
    <externalId>true</externalId>
    <label>PJP Id Text</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>