force-app/main/default/objects/Calendar_beat__c/fields/Recurring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Frequency__c</fullName>
    <label>Recurring Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>