force-app/main/default/objects/Calendar_beat__c/fields/Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_Month__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>